--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3322,7 +3322,7 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 0.125rem solid rgba(0, 0, 0, 0.125);
+  border: 0.125rem solid rgb(0, 0, 0);
   border-radius: 0.5rem; }
   .card > hr {
     margin-right: 0;
